--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,6 +3,7 @@ name: run main.py
 on:
   schedule:
     - cron: "* * * * *"
+    workflow_dispatch:
 
 jobs:
   build:
@@ -22,4 +23,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: execute py script # run main.py
-        run: python3 main.py
+        run: python main.py
