--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: CRON_TESTING
     env:
         TEST1: ${{ secrets.TEST1 }}
     steps:
